--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,46 +11,40 @@
     <string name="pref_default_display_name">John Smith</string>
 
     <string name="pref_title_font_picker">Font</string>
-    <string-array name="pref_font_list_titles">
-        <item>Sans Serif</item>
-        <item>Serif</item>
-        <item>Mono</item>
-    </string-array>
-    <string-array name="pref_font_list_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
+        <string-array name="pref_font_list_titles">
+            <item>Sans Serif</item>
+            <item>Serif</item>
+            <item>Mono</item>
+        </string-array>
+        <string-array name="pref_font_list_values">
+            <item>0</item>
+            <item>1</item>
+            <item>2</item>
+        </string-array>
 
     <string name="pref_title_font_size">Font Size</string>
-    <string-array name="pref_font_size_titles">
-        <item>Smallest</item>
-        <item>Smaller</item>
-        <item>Small</item>
-        <item>Normal</item>
-        <item>Large</item>
-        <item>Larger</item>
-        <item>Largest</item>
-    </string-array>
-    <string-array name="pref_font_size_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-    </string-array>
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
+        <string-array name="pref_font_size_titles">
+            <item>Smallest</item>
+            <item>Smaller</item>
+            <item>Small</item>
+            <item>Normal</item>
+            <item>Large</item>
+            <item>Larger</item>
+            <item>Largest</item>
+        </string-array>
+        <string-array name="pref_font_size_values">
+            <item>0</item>
+            <item>1</item>
+            <item>2</item>
+            <item>3</item>
+            <item>4</item>
+            <item>5</item>
+            <item>6</item>
+        </string-array>
 
     <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
+    <string name="pref_header_timer">Timer</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_title_disable_timer">Enable</string>
 </resources>
