--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,9 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="pref_title_disable_timer">Enable</string>
+    <string name="timer_enabled_key">timer_enabled_key</string>
+    <string name="timer_list_key">timer_list_key</string>
+    <string name="font_list_key">font_list_key</string>
+    <string name="font_size_list_key">font_size_list_key</string>
+    <string name="timer_vibrate_key">timer_vibrate_key</string>
 </resources>
