--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,36 +11,36 @@
     <string name="pref_default_display_name">John Smith</string>
 
     <string name="pref_title_font_picker">Font</string>
-        <string-array name="pref_font_list_titles">
-            <item>Sans Serif</item>
-            <item>Serif</item>
-            <item>Mono</item>
-        </string-array>
-        <string-array name="pref_font_list_values">
-            <item>0</item>
-            <item>1</item>
-            <item>2</item>
-        </string-array>
+    <string-array name="pref_font_list_titles">
+        <item>Sans Serif</item>
+        <item>Serif</item>
+        <item>Mono</item>
+    </string-array>
+    <string-array name="pref_font_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 
     <string name="pref_title_font_size">Font Size</string>
-        <string-array name="pref_font_size_titles">
-            <item>Smallest</item>
-            <item>Smaller</item>
-            <item>Small</item>
-            <item>Normal</item>
-            <item>Large</item>
-            <item>Larger</item>
-            <item>Largest</item>
-        </string-array>
-        <string-array name="pref_font_size_values">
-            <item>0</item>
-            <item>1</item>
-            <item>2</item>
-            <item>3</item>
-            <item>4</item>
-            <item>5</item>
-            <item>6</item>
-        </string-array>
+    <string-array name="pref_font_size_titles">
+        <item>Smallest</item>
+        <item>Smaller</item>
+        <item>Small</item>
+        <item>Normal</item>
+        <item>Large</item>
+        <item>Larger</item>
+        <item>Largest</item>
+    </string-array>
+    <string-array name="pref_font_size_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
 
     <!-- Example settings for Notifications -->
     <string name="pref_header_timer">Timer</string>
@@ -52,4 +52,9 @@
     <string name="font_list_key">font_list_key</string>
     <string name="font_size_list_key">font_size_list_key</string>
     <string name="timer_vibrate_key">timer_vibrate_key</string>
+
+    <string name="title_activity_about">AboutActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="timer_key">timer_key</string>
 </resources>
