--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="timer_key">timer_key</string>
+    <string name="set_timer_title">Set Time Out (seconds)</string>
+    <string name="copyright_content">TRX</string>
+    <string name="close_button">CLOSE</string>
 </resources>
